<resources>
    <string name="app_name">赢家</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="network_error">网络连接异常</string>
    <string name="network_right">网络连接正常</string>
    <string name="app_exit">再按一次退出程序</string>
    <string name="login_activity_userName">邮箱或用户名</string>
    <string name="login_activity_password">密&#160;&#160;码</string>
    <string name="home_sure">确定</string>
    <string name="home_scale">客户推广</string>
    <string name="scale_search">项目名称 区域 邮政编码 地址</string>
    <string name="home_scale_en">Sales&#160;&#160; promotion</string>
    <string name="search">搜索</string>
    <string name="select">筛选</string>
    <string name="scale_tab_area">所在区域</string>
    <string name="scale_tab_hourse">房型</string>
    <string name="scale_tab_prop">面积</string>
    <string name="scale_tab_price">价格区间</string>
    <string name="reserver">预订</string>
    <string name="home_custom">客户管理</string>
    <string name="home_custom_en">Customer&#160;&#160;management</string>
    <string name="home_study">学习园地</string>
    <string name="home_study_en">Learning&#160;&#160;garden</string>
    <string name="home_setting">设置中心</string>
    <string name="home_setting_en">Setting</string>
    <string name="retry_large_image"><u>加载失败，点击重试</u></string>
    <string name="login_usename">用户名或密码不能为空</string>
    <string name="setting_changepassword">修改密码</string>
    <string name="setting_bindaccount">绑定账号</string>
    <string name="setting_bindweixinaccount">微信</string>
    <string name="setting_notice">通知</string>
    <string name="sale_record">销售记录</string>
    <string name="setting_notification">通知中心</string>
    <string name="load_completely">已经全部加载完毕</string>
    <string name="setting_cancellogin">退出登录</string>
    <string name="old_password">原密码</string>
    <string name="old_password_ch">原密码不能为空</string>
    <string name="new_password">新密码</string>
    <string name="new_password_ch">新密码不能为空</string>
    <string name="sure_password">确认密码</string>
    <string name="sure_password_en">请再次输入密码</string>
    <string name="sure">确认修改</string>
    <string name="ok">确认</string>
    <string name="submit">提交</string>
    <string name="sure_change">两次密码不一致</string>
    <string name="unlimited">不限</string>
    <string name="study">学习</string>
    <string name="check">考核</string>
    <string name="check_results">查看成绩</string>
    <string name="check_exam">开始考试</string>
    <string name="start_check">开始考核</string>
    <string name="customdetaild_title">编辑</string>
    <string name="customdetaild_save">保存</string>
    <string name="custome_add">新增用户</string>
    <string name="customdetaild_add">添加</string>
    <string name="photo">拍照</string>
    <string name="photofromalbum">从相册中选择</string>
    <string name="cancel">取消</string>
    <string name="viewdetail">查看详情</string>
    <string name="remain">预定</string>
    <string name="unknow">未知</string>
    <string name="investment">投资</string>
    <string name="selflive">自住</string>
    <string name="foreignInves">海外投资</string>
    <string name="recash">现金</string>
    <string name="credit">信用卡</string>
    <string name="desposit">直接存款</string>
    <string name="transfer">银行转账</string>
    <string name="recheck">支票</string>
    <string name="rephotograph">重拍</string>
    <string name="use">使用照片</string>
    <string name="inverstigation">选择客户</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="lawyer">律师管理</string>
    <string name="pay_method">请选择支付方式</string>
    <string name="lawyer_id">请选择律师</string>
    <string name="picpath">请上传支付凭证</string>
    <string name="issaling">在售</string>
    <string name="issalingnum">在售数量</string>
    <string name="hadsaled">已售</string>
    <string name="sale_list">销售列表</string>
    <string name="apply_contract">申请合同</string>
    <string name="cancel_oder">放弃订单</string>
    <string name="sale_cancel">取消</string>
    <string name="salaId">销售ID</string>
    <string name="saleprice">销售价格</string>
    <string name="custome">客户</string>
    <string name="ask_contract">请求合同</string>
    <string name="sale_notice">销售通知单</string>
    <string name="sale_pro">销售推广</string>
    <string name="message">消息</string>
    <string name="recharge">充值</string>
    <string name="visit">拜访记录</string>
    <string name="yuyue">预约</string>
    <string name="yuyuerecord">预约记录</string>
    <string name="expandre">推广记录</string>
    <string name="housepurchase">购房记录</string>
    <string name="blank_space">&#160;&#160;</string>
    <string name="single_blank_space">&#160;</string>
    <string name="clear">清除</string>
    <string name="reset">重置</string>
    <string name="alipay">支付宝</string>
    <string name="wechatpay">微信</string>
    <string name="zhifu">支付</string>
    <string name="updateorder">修改订单</string>
    <string name="delete">删除</string>
    <string name="commission">我的佣金</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_pr">往期项目</string>
    <string name="investigate_list">调研</string>
    <string name="commissiondetails">佣金详情</string>
    <string name="file_act">文件</string>
    <string name="contract">合同</string>
    <string name="confirm_pay_information">我已确认在通知单内的支付信息</string>
    <string name="sale_ask_form">销售请求单</string>
    <string name="confirm_content">请确认通知单内容</string>
    <string name="remark">备注</string>
    <string name="remark_">备注:</string>
    <string name="commission1">佣金1</string>
    <string name="commission2">佣金2</string>
    <string name="commission3">佣金3</string>
    <string name="totalmoney">总金额</string>
    <string name="moenydes">佣金/税金/合计</string>
    <string name="totalnum">合计:0.00/0.00/0.00</string>
    <string name="noeoi">客户没有EOI,点击右上角充值</string>
    <string name="headerphoto">头像</string>
    <string name="firstname">姓氏</string>
    <string name="middlename">中间名</string>
    <string name="lastname">名字</string>
    <string name="nickname">昵称</string>
    <string name="Nickname">Nickname</string>
    <string name="englishname">英文名</string>
    <string name="birthday">生日</string>
    <string name="mobilephone">手机</string>
    <string name="mobileormail">手机或邮箱二选一</string>
    <string name="email">邮箱</string>
    <string name="qq">QQ号</string>
    <string name="nationorarea">国籍或地区</string>
    <string name="pcd">省市区</string>
    <string name="procidis">省份 城市 地区</string>
    <string name="address">联系地址</string>
    <string name="postcode">邮编</string>
    <string name="firb">FIRB</string>
    <string name="no">否</string>
    <string name="job">职业</string>
    <string name="salary">目前年薪</string>
    <string name="idcard">身份证</string>
    <string name="passport">护照</string>
    <string name="nation">国籍</string>
    <string name="country">国家</string>
    <string name="relationshipfirstname">亲属姓</string>
    <string name="relationlastname">亲属名</string>
    <string name="relation">关系</string>
    <string name="relationphone">亲属手机</string>
    <string name="family_email">亲属邮箱</string>
    <string name="eoi">EOI</string>
    <string name="date">预约</string>
    <string name="promoterecord">推广记录</string>
    <string name="purchasehouserecord">购房记录</string>
    <string name="skip">跳过</string>
    <string name="area">区域</string>
    <string name="nolimit">不限</string>
    <string name="housetype">房型</string>
    <string name="price">价格</string>
    <string name="totaldes">共:</string>
    <string name="questionnum">6题</string>
    <string name="replyright">回答正确:</string>
    <string name="zero">0题</string>
    <string name="accuracy">正确率:</string>
    <string name="percent">0.00%</string>
    <string name="promotematerial">共有0个推广素材</string>
    <string name="_0">newadd</string>
    <string name="customernum">您有0位客户</string>
    <string name="localmonth">本月新增0位</string>
    <string name="zerostudymaterial">共有0个学习资料</string>
    <string name="checknum">您有0个考核未完成</string>
    <string name="unread">您还有0条未读信息</string>
    <string name="customename">客户名字</string>
    <string name="contact">联系方式</string>
    <string name="datetime">预约时间</string>
    <string name="unsure">无法确定</string>
    <string name="lawyerraw">律师行</string>
    <string name="addressnopoint">联系地址</string>
    <string name="telephone">电话</string>
    <string name="productdes">好房不等人,快来抢房了</string>
    <string name="introduce">这里是简介</string>
    <string name="details">详情</string>
    <string name="hashsalenum">已售数量</string>
    <string name="firbnum">FIRB有效数量:</string>
    <string name="eoiopen">EOI开放时间:</string>
    <string name="starttime">1970/01/01</string>
    <string name="deadtime">销售截止日期:</string>
    <string name="closedate">结算日期:</string>
    <string name="expected_date_of_launch">预计交房日期:</string>
    <string name="date_of_final_launch">最后交房日期:</string>
    <string name="memo">预览备忘录:</string>
    <string name="projectpropety">项目属性:</string>
    <string name="supplier">供应商:</string>
    <string name="supplierlaw">供应商律师:</string>
    <string name="builder">建筑商:</string>
    <string name="accountholder">存款持有者:</string>
    <string name="fore">外汇保证金:</string>
    <string name="firbdeposit">FIRB保证金:</string>
    <string name="orderfee">预订费底限:</string>
    <string name="jieshao">介绍</string>
    <string name="video">视频</string>
    <string name="floorphoto">平面图</string>
    <string name="file">文件</string>
    <string name="state">状态</string>
    <string name="type">类型</string>
    <string name="unknown">未知</string>
    <string name="batchnum">批号</string>
    <string name="theme">萨达</string>
    <string name="unitnum">单元号</string>
    <string name="floortype">楼层类型</string>
    <string name="floor">楼层</string>
    <string name="bathroomnum">浴室套间数</string>
    <string name="direction">朝向</string>
    <string name="areanum">套内面积</string>
    <string name="outsidearea">套外面积</string>
    <string name="doublezero">0.00</string>
    <string name="totalarea">总面积</string>
    <string name="sada">萨达萨达</string>
    <string name="singlezero">0.0</string>
    <string name="available_for_firb">Available For FIRB</string>
    <string name="sale">销售</string>
    <string name="validity">有效期</string>
    <string name="threemonth">2017/03/31</string>
    <string name="jinliu">jinliu</string>
    <string name="cuslawyer">客户律师</string>
    <string name="buyhousetention">购房目的</string>
    <string name="uploadeevidence">上传凭证</string>
    <string name="uploadeevidencepoint">上传凭证:</string>
    <string name="seprate">-</string>
    <string name="time">日期</string>
    <string name="project">项目</string>
    <string name="cus_address">客户地址</string>
    <string name="time_long">时长</string>
    <string name="orde_num">订单号</string>
    <string name="order_info">订单信息</string>
    <string name="complete">完成</string>
    <string name="declaretitle">用户定金支付申明</string>
    <string name="s_0">尊敬的客户</string>
    <string name="s_1"> 恭喜您通过赢家平台预定了此物业。 每套物业的预定费是300 澳币 （ 或者2000 人民币）。 请使用下列方式中的任意一种来支付。</string>
    <string name="s_2"> 如果您成功完成了此物业的合同交换， 并且支付了10% 全额定金， 赢家系统将退还300 澳币 定金（ 或者2000 元人民币）到您指定的账户。</string>
    <string name="s_3"> 如果您由于任何原因，没有完成合同交换， 或者如果您改变主意，决定通过赢家购买另一个物业， 您交付的300 澳币 将作为系统的服务费， 不予以退还。
在您同意以上条件之后，系统将进一步处理您的物业预定事宜。</string>
    <string name="s_4">同意</string>
    <string name="invitedes">邀请好友得分红奖励,多邀多得!</string>
    <string name="recommendqr">推荐码</string>
    <string name="qrdes">邀请好扫描二维码下载APP,TA可获取专属奖励\n您可获订单实付金额的<font color='red'>5%</font>作为分红奖励</string>
</resources>