<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/scale_tab5"
              android:orientation="horizontal"
              android:paddingBottom="@dimen/padding_margin_4"
              android:paddingTop="@dimen/padding_margin_4">

    <TextView
        android:id="@+id/tvIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.5"
        android:drawablePadding="@dimen/padding_margin_2"
        android:drawableTop="@mipmap/introtool"
        android:gravity="center"
        android:text="@string/jieshao"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_size_10"/>

    <TextView
        android:id="@+id/tvVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.5"
        android:drawablePadding="@dimen/padding_margin_2"
        android:drawableTop="@mipmap/videotool"
        android:gravity="center"
        android:text="@string/video"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_size_10"/>

    <TextView
        android:id="@+id/tvOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="@dimen/padding_margin_2"
        android:drawableTop="@mipmap/shopping"
        android:gravity="center"
        android:text="@string/reserver"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_size_10"/>

    <TextView
        android:id="@+id/tvFloor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.5"
        android:drawablePadding="@dimen/padding_margin_2"
        android:drawableTop="@mipmap/floorstool"
        android:gravity="center"
        android:text="@string/floorphoto"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_size_10"/>

    <TextView
        android:id="@+id/tvContract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.5"
        android:drawablePadding="@dimen/padding_margin_2"
        android:drawableTop="@mipmap/contracttool"
        android:gravity="center"
        android:text="@string/contract"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_size_10"/>

    <TextView
        android:id="@+id/tvFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.5"
        android:drawablePadding="@dimen/padding_margin_2"
        android:drawableTop="@mipmap/othertool"
        android:gravity="center"
        android:text="@string/file"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_size_10"/>
</LinearLayout>


