<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yd.org.sellpopularizesystem.activity.InviteQRActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_margin_30"
        android:text="@string/invitedes"
        android:textColor="#303030"
        android:textSize="@dimen/tv_size_20"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_margin_30"
        android:text="@string/recommendqr"
        android:textColor="#303030"
        android:textSize="@dimen/tv_size_20" />

    <ImageView
        android:id="@+id/ivQr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/padding_margin_50"
        android:layout_marginRight="@dimen/padding_margin_50"
        android:layout_marginTop="@dimen/padding_margin_30"
        android:layout_weight="1"
        android:src="@mipmap/qr" />

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="130dp"
        android:layout_marginTop="@dimen/padding_margin_20"
        android:gravity="center"
        android:text="@string/qrdes" />
</LinearLayout>
